--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -1,16 +1,16 @@
-Un proceso es en esencia un ***programa en ejecución***. Cada proceso tiene asociado un espacio de direcciones, una lista de ubicaciones de memoria que va desde algún mínimo (generalmente 0, por lo general se habla de direcciones logicas) hasta cierto valor máximo, donde el proceso puede leer y escribir información. El espacio de direcciones contiene el programa ejecutable, los datos del programa y su pila. También hay asociado a cada proceso un conjunto de recursos, que comúnmente incluye registros (el contador de programa y el apuntador de pila, entre ellos) y toda la demás información necesaria para ejecutar el programa.
+Un proceso es en esencia un ***programa en ejecución***. Cada proceso tiene asociado un espacio de direcciones, una lista de ubicaciones de memoria que va desde algún mínimo (generalmente 0, por lo general se habla de direcciones lógicas) hasta cierto valor máximo, donde el proceso puede leer y escribir información. El espacio de direcciones contiene el programa ejecutable, los datos del programa y su pila. También hay asociado a cada proceso un conjunto de recursos, que comúnmente incluye registros (el contador de programa y el apuntador de pila, entre ellos) y toda la demás información necesaria para ejecutar el programa.
 También podemos entender a un proceso como ***unidad de trabajo***. Aunque su objetivo principal es la ejecución de programas de usuario, también tiene que ocuparse de diversas tareas del sistema, que no están incluidas dentro del kernel. Por tanto, un sistema está formado por una colección de procesos: procesos del SO que ejecutan código del sistema y procesos de usuario que ejecutan código de usuario.
 Cada cierto tiempo, el sistema operativo decide detener la ejecución de un proceso y empezar a ejecutar otro; debido a que el primero ha utilizado más tiempo del que le correspondía de la CPU en el último segundo, u otros tipos de situaciones.
 Cuando un proceso se ***suspende en forma temporal***, todos estos apuntadores deben guardarse de manera que una llamada a *read* que se ejecute después de reiniciar el proceso lea los datos apropiados. En muchos sistemas operativos, toda la información acerca de cada proceso (además del contenido de su propio espacio de direcciones) se almacena en una tabla del sistema operativo, conocida como la ***tabla de procesos***, la cual es un arreglo (o lista enlazada) de estructuras, una para cada proceso que se encuentre actualmente en existencia.
 De esta forma, un proceso (suspendido) consiste en su espacio de direcciones, que se conoce comúnmente como imagen de núcleo y su entrada en la tabla de procesos, que guarda el contenido de sus registros y muchos otros elementos necesarios para reiniciar el proceso más adelante.
 
 >[!important] La Multiprogramación
->Hoy en dia los SO modernos son multiprogramación, es decir, pueden ejecutar mas de un programa a la vez, esto es gracias a las ***interrupciones*** que provee el SO, estas interrupciones se pueden dar por diferentes motivos, por ejemplo la creación de un proceso que posea mas propridad, por lo que si interrumpe el proceso que esta ejecutando el procesador y se pasa a antender a la tarea de mas prioridad. O por la ejecución de de una instrucción ilegal o incluso el uso de direcciones invalidas.
+>Hoy en día los SO modernos son multiprogramación, es decir, pueden ejecutar más de un programa a la vez, esto es gracias a las ***interrupciones*** que provee el SO, estas interrupciones se pueden dar por diferentes motivos, por ejemplo la creación de un proceso que posea más propiedad, por lo que si interrumpe el proceso que está ejecutando el procesador y se pasa a atender a la tarea de más prioridad. O por la ejecución de una instrucción ilegal o incluso el uso de direcciones inválidas.
 
 ## El Modelo de Procesos
 
 En este modelo, todo el software ejecutable en la computadora, que algunas veces incluye al sistema operativo, se organiza en varios ***procesos secuenciales***. Un proceso no es más que una instancia de un programa en ejecución, incluyendo los valores actuales del contador de programa, los registros y las variables. Conceptualmente, cada proceso tiene su propia CPU virtual; pero en la realidad, la CPU real conmuta de un proceso a otro.
-Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecutan de forma independiente. Desde luego que sólo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado o por una interrupción), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
+Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecutan de forma independiente. Desde luego que solo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado o por una interrupción), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
 
 >[!tldr] El Proceso es más que un Programa en Ejecución
 >Hay que resaltar que un proceso es algo más que el código de un programa (al que en ocasiones se denomina **sección de texto**) Además del código, un proceso incluye también la actividad actual, que queda representada por el valor del **contador de programa** y por los contenidos de los registros del procesador. Generalmente, un proceso incluye también la **pila** del proceso, que contiene datos temporales (parámetros de las funciones, las direcciones de retorno y las variables locales), y una **sección de datos**, que contiene las variables globales. El proceso puede incluir, asimismo, un **cúmulo de memoria,** que es la memoria que se asigna dinámicamente al proceso en tiempo de ejecución.
