--- a/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -1,5 +1,5 @@
 El **sistema operativo** es un programa, que reside en la computadora, el cual administra y logra un mejor aprovechamiento de los recursos físicos y lógicos. También proporciona las bases para los programas de aplicación y actúa como intermediario entre el usuario y el hardware de la computadora.
-El SO controla y coordina el uso del hardware entre los diversos programas de aplicación por parte de los distintos usuarios, el objeto de un SO es proporcionar un entorno en el que el usuario pueda ejecutar programas de manera práctica y eficiente. El SO gestiona el hardware, el hardware debe proporcionar los mecanismos apropiados para asegurar el correcto funcionamiento del sistema informático e impedir que los programas de usuario interfieran con el apropiado funcionamiento del sistema.
+El SO controla y coordina el uso del hardware entre los diversos programas de aplicación por parte de los distintos usuarios, el objetivo de un SO es proporcionar un entorno en el que el usuario pueda ejecutar programas de manera práctica y eficiente. El SO gestiona el hardware, el hardware debe proporcionar los mecanismos apropiados para asegurar el correcto funcionamiento del sistema informático e impedir que los programas de usuario interfieran con el apropiado funcionamiento del sistema.
 El SO es el programa que está más íntimamente relacionado con el hardware, ya que este es un **asignador de recursos**. Un sistema informático tiene muchos recursos que puedan ser necesarios para solucionar un problema: tiempo de CPU, espacio de memoria, espacio de almacenamiento de archivos, dispositivos de E/S, etc. el SO actúa como el administrador de estos recursos. Al enfrentarse a numerosas y posiblemente conflictivas solicitudes de recursos, este debe decidir como asignarlo a programas y usuarios específicos, de modo que la computadora pueda operar de forma ***eficiente y equitativa***.
 Un punto de vista ligeramente diferente de un SO es de un programa de control, y como tal, gestiona la ejecución de los programas de usuario para evitar errores y mejorar el uso de la computadora. Tiene que ver especialmente con el funcionamiento y control de los dispositivos de E/S.
 
@@ -40,8 +40,8 @@ En primera instancia, con los tubos de vacío, no existía como tal el concepto 
 Con la invención de los primeros chips, los SO adquirieron nuevas prestaciones y responsabilidades, se establece el concepto de multiprogramación, lo que le permitió a las computadoras ejecutar múltiples programas al mismo tiempo, esto agregó una nueva responsabilidad al SO, ya que es él quien debe cuidar que ningún programa se superponga a otro. Al mismo tiempo surgen los sistemas de tiempo compartido, en el cual teníamos múltiples usuarios ejecutando distintos programas.
 
 >[!info] Posiciones Lógicas y Físicas
->La posición lógica 0 cambia cuando se carga el sistema operativo, ya que todos los programas compilados arrancan desde la posición lógica 0, si no cambiara el valor se podría llegar a sobreescribir el SO.
->- Cada programa compilado va a indicar que donde se tiene que cargar es en la pocisión 0, por eso este debe ser cambiado.
+>La posición lógica 0 cambia cuando se carga el sistema operativo, ya que todos los programas compilados arrancan desde la posición lógica 0, si no cambiara el valor se podría llegar a sobrescribir el SO.
+>- Cada programa compilado va a indicar que donde se tiene que cargar es en la posición 0, por eso este debe ser cambiado.
 >
 > Este 0 despues va a ser traducido por el SO a la direccion física a la que en realidad el procesador debera ir.
 
@@ -60,18 +60,18 @@ Más recientemente surge el concepto de sistemas distribuidos, estos son un conj
 - El So debe defender el ***grado de Multiprogramación***, es decir, el SO debe tener la mayor cantidad de procesos corriendo, pero al mismo tiempo tiene que asegurarse que los recursos que ocupen dichos procesos sean más o menos los mismos.
 
 >[!note] Para Cuando Demos Procesos
->Cuando un proceso es interrumpido por culpa de una instrucción de entrada salida que esta en su rutina, el procesador salta a otro proceso y descarta todas las instrucciones siguientes de ese proceso.
->Pero guarda el ***program counter (PC)***, para que cunado el procesador retone la rutina de ese proceso, la retome desde el mismo lugar en donde la dejo la ulti a vez
+>Cuando un proceso es interrumpido por culpa de una instrucción de entrada salida que está en su rutina, el procesador salta a otro proceso y descarta todas las instrucciones siguientes de ese proceso.
+>Pero guarda el ***program counter (PC)***, para que cuando el procesador retorne la rutina de ese proceso, la retome desde el mismo lugar en donde la dejo la última vez
 
 ---
 
 ## Tipos de Sistemas Operativos
 
 >[!example] Clasificación de los Sistemas Operativos
->Los SO se pueden clasificar de la seguiente manera:
+>Los SO se pueden clasificar de la siguiente manera:
 >- **Por su arquitectura**:
->	- Monoliticos
->	- Jerarquicos o por capas
+>	- Monolíticos
+>	- Jerárquicos o por capas
 >	- Maquinas virtuales
 >	- Cliente/servidor
 >- **Por la forma de ofrecer servicios**:
@@ -122,13 +122,11 @@ Se traslada código a capas superiores dejando un núcleo o kernel mínimo. La m
 
 #### Por Lote
 
-Ejecuta trabajos o jobs por lotes. La CPU en las esperas de entradas/salidas no hace nada, ya que esta solo puede ocuparse de una tarea hasta que esta finalizó
+Ejecuta trabajos o jobs por lotes. La CPU en las esperas de entradas/salidas no hace nada, ya que esta solo puede ocuparse de una tarea hasta que esta finalizó. El CPU queda en tiempo ocioso.
 
 #### Multiprogramación
 
-El procesador tiene más de un proceso para ejecutar. La secuencia de ejecución de estos mismos se determinan de acuerdo a la ***prioridad del proceso*** o espera de E/S. El SO selecciona un proceso y lo comienza a ejecutar, si hay una espera por E/S, el SO
-seleccionará otro proceso y lo ejecutará. Cuando el primer proceso termine su espera,
-obtendrá el procesador nuevamente. Siempre se ejecuta un proceso por procesador.
+El procesador tiene más de un proceso para ejecutar. La secuencia de ejecución de estos mismos se determinan de acuerdo a la ***prioridad del proceso*** o espera de E/S. El SO selecciona un proceso y lo comienza a ejecutar, si hay una espera por E/S, el SO seleccionará otro proceso y lo ejecutará. Cuando el primer proceso termine su espera, obtendrá el procesador nuevamente. Siempre se ejecuta un proceso por procesador.
 
 #### Tiempo Compartido
 
