Correcciones de redacción v2

--- a/3° Año/Metodología de Sistemas I/Unidad 1/1. Repaso Teoría de Sistemas.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 1/1. Repaso Teoría de Sistemas.md
@@ -23,7 +23,7 @@ Explica los sistemas como un todo y no como una suma de partes. Aborda el proble
 
 ![[MS-elementosSistemas.png]]
 
-- **Entrada**: Constituyen los elementos que ingresan al sistema. Son las fierzas de arranque que suministran al sistema sus necesidades operativas.
+- **Entrada**: Constituyen los elementos que ingresan al sistema. Son las fuerzas de arranque que suministran al sistema sus necesidades operativas.
 - **Proceso**: Constituye la ***transformación*** de las entradas en salidas, como tal puede ser una máquina, un individuo, una computadora, etc. En TGS, existen dos tipos:
 	- **Caja Blanca**: conocemos cómo se realiza la transformación de entradas en salidas.
 	- **Caja Negra**: no se conoce el funcionamiento interno del proceso mediante el cual las entradas se transforman en salidas.
