--- a/3° Año/Metodología de Sistemas I/Unidad 4/1. Herramientas para la documentación de procesos..md
+++ b/3° Año/Metodología de Sistemas I/Unidad 4/1. Herramientas para la documentación de procesos..md
@@ -35,7 +35,7 @@ Pueden ocurrir cuatro problemas principales al desarrollar tablas de decisión, 
 ![[Ms-tabla-otro-ej.png]]
 
 >[!note] Nota
->Las situaciones imposibles ocurren, ya que en el tipo de tablas de decisiones simples las situaciones solo pueden tener dos estas, y se van rellenando como si fuera una tabla lógica.
+>Las situaciones imposibles ocurren, ya que en las tablas de decisiones simples las situaciones solo pueden tener dos estados, y se van rellenando como si fuera una tabla lógica.
 >Las redundancias, en cambio, se dan cunado para los mismos estados de las condiciones se toma la misma acción. Las contradicciones, por otro lado, surgen de que para el mismo estado de las condiciones la salida opte por acciones diferentes, tal y como se ve en el ejemplo.
 
 Por otro lado, existen las **tablas extendidas**, que al contrario que las simples, estas pueden tomar más de un estado. Se utilizan cuando existen variables que pueden asumir más de dos valores, lo que le permiten reducir la complejidad de las tablas de decisión.
