--- a/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -57,7 +57,7 @@ Más recientemente surge el concepto de sistemas distribuidos, estos son un conj
 #### Datos a Tener en Cuenta
 
 - Los procesos del SO son los que cuentan con prioridad más alta, pero existe un concepto de equidad para los procesos, con el cual un proceso de prioridad baja se va a ejecutar en un tiempo considerablemente bueno, sin importar que existan otras tareas con más prioridad. Para que esto sea así el mismo SO en cada ciclo aumenta en una la prioridad de todas las actividades pendientes a realizar.
-- El So debe defender el ***grado de Multiprogramación***, es decir, el SO debe tener la mayor cantidad de procesos corriendo, pero al mismo tiempo tiene que asegurarse que los recursos que ocupen dichos procesos sean más o menos los mismos.
+- El SO debe defender el ***grado de Multiprogramación***, es decir, el SO debe tener la mayor cantidad de procesos corriendo, pero al mismo tiempo tiene que asegurarse que los recursos que ocupen dichos procesos sean más o menos los mismos.
 
 >[!note] Para Cuando Demos Procesos
 >Cuando un proceso es interrumpido por culpa de una instrucción de entrada salida que está en su rutina, el procesador salta a otro proceso y descarta todas las instrucciones siguientes de ese proceso.
