--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -71,7 +71,7 @@ Cada proceso se representa en el SO mediante un **bloque de control de proceso**
 A su vez, el PCB maneja 3 tablas: un puntero a la ***tabla de páginas*** muestra la cantidad de páginas en la que está partido el programa e indica cuáles de esas páginas está en memoria principal y cuáles no. Un puntero a la ***tabla de recursos*** que contiene los dispositivos que va a solicitar el proceso. Y una ***tabla de archivos abiertos*** donde están todos los archivos que utiliza el proceso en su ejecución.
 
 >[!important] Gestión de PCB
->Cuando se inicia la computadora, se crean todos los PCB que van a estar disponibles, esto significa que hay un número limitado. Cuando se crea un proceso, el Sistema Operativo le asigna a cada proceso nuevo un PCB, es el mismo Sistema Operativo el que una vez finalizado o muerto el proceso recuperar ese PCB y dejarlo disponible para que otro proceso pueda utilizarlo.
+>Cuando se inicia la computadora, se crean todos los PCB que van a estar disponibles, esto significa que hay un número limitado. Cuando se crea un proceso, el Sistema Operativo le asigna a cada proceso nuevo un PCB, es el mismo Sistema Operativo el que una vez finalizado o muerto el proceso recupera ese PCB y lo deja disponible para que otro proceso pueda utilizarlo.
 
 En resumen, el PCB sirve simplemente como repositorio para la información variable con las que cuenta un proceso. Esto es así, ya que el programa cuando es convertido en un proceso y cargado en memoria principal, lo hace en modo solo lectura, esto con el fin de facilitarle las cosas al Sistema Operativo y que no tenga que preocuparse por posibles errores en la escritura de información.
 En los sistemas operativos más modernos. Es decir, los de tiempo compartido, el PCB también almacena quien es el usuario propietario de ese proceso. 
@@ -102,5 +102,5 @@ La conmutación de la CPU a otro proceso requiere un salvaguardado del estado de
 ## Finalización de Procesos
 
 Cuando un proceso termina, ya sea de forma normal o anormal, lo correspondiente es actualizar la información del disco duro. El primer paso que realiza el sistema operativo es fijarse en que estado se encuentra el proceso, y de acuerdo a eso se optara por realizar una rutina u otra.
-- **Si el proceso se encuentra en Listo o en Espera,** el SO tendrá que primero actualizar el contenido de la memoria al disco duro, Luego se dirigirá al PCB en donde se cerraran todos los archivos que haya estado utilizando el proceso, a su vez se cierran todas las entradas de la ***tabla de recursos*** para luego ser eliminada, algo similar pasa con la tabla de páginas, donde se liberan todos los parcos que integraban la tabla y luego se elimina la tabla, ya como paso final se le des asigna el PCB, quedando este libre para ser utilizado por otro proceso.
+- **Si el proceso se encuentra en Listo o en Espera,** el SO tendrá que primero actualizar el contenido de la memoria al disco duro, Luego se dirigirá al PCB en donde se cerraran todos los archivos que haya estado utilizando el proceso, a su vez se cierran todas las entradas de la ***tabla de recursos*** para luego ser eliminada, algo similar pasa con la tabla de páginas, donde se liberan todos los marcos que integraban la tabla y luego se elimina la tabla, ya como paso final se le des asigna el PCB, quedando este libre para ser utilizado por otro proceso.
 - **Si el proceso se encuentra en Ejecución** el sistema operativo tendrá que realizar una tarea adicional, que consiste en actualizar la memoria principal con el contenido de la caché, para posteriormente realizar los mismos pasos descritos en la situación anterior. 
