Se acomodo un poco la introduccion de SO

--- a/3° Año/Metodología de Sistemas I/Unidad 5/2. Análisis de Flujo de Datos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 5/2. Análisis de Flujo de Datos.md
@@ -11,7 +11,7 @@ Estas herramientas de modelado nos permiten concentrarnos en las propiedades imp
 
 ## Diagrama de Flujo de Datos
 
-El análisis de flujo de datos se utilizan para describir y analizar el movimiento de los datos en cada actividad de una determinado sistema. Documentando de forma gráfica la relación entre procesos y datos, y en los diccionarios de datos que describen de manera formal los datos del sistema y los sitios donde se utilizan.
+El análisis de flujo de datos se utilizan para describir y analizar el movimiento de los datos en cada actividad de un determinado sistema, analizando la transformación por la que pasan los datos y las salidas de los mismos. Documentando de forma gráfica la relación entre procesos y datos, y en los diccionarios de datos que describen de manera formal los datos del sistema y los sitios donde se utilizan.
 Este tipo de diagrama solo especifica que es lo que hace el sistema, no el como lo lleva a cabo, es decir, solo modela sus funciones. Al ser un modelo gráfico es comprensible incluso por los usuarios, lo que lo hace muy conveniente de usar para cualquier nivel de especificación.
 
 #### Notación
