--- a/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -15,9 +15,6 @@ El SO se encarga, entre otras cosas:
 - Traducir las direcciones lógicas de los distintos programas en direcciones físicas para que el procesador pueda operar correctamente.
 - Cuida que no se sobreescriba información sobre sí mismo y sobre los otros programas que se encuentran en memoria principal. Posee el rol de protector.
 
->[!important] Interrupciones
->El hardware puede activar una interrupción en cualquier instante enviando una señal a la CPU, normalmente a través del bus del sistema, mientras que el software puede activar una interrupción ejecutando una operación especial denominada **llamada del sistema** (o llamada de monitor).
-
 ---
 
 #### Los Sistemas Informáticos
@@ -222,7 +219,10 @@ Estas llamadas se puede agrupar en:
 
 A forma de resumen le dejaremos este cuadro 
 
-<span class="centerImg"> ![[SO-interrupciones.png]] </span>
+![[SO-interrupciones.png]]
+
+>[!important] Interrupciones
+>El hardware puede activar una interrupción en cualquier instante enviando una señal a la CPU, normalmente a través del bus del sistema, mientras que el software puede activar una interrupción ejecutando una operación especial denominada **llamada del sistema** (o llamada de monitor).
 
 ---
 
