--- a/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -34,9 +34,12 @@ Sommerville clasifica los procesos de software en dos categorías, como **dirigi
 
 ##### Modelos de Procesos de Desarrollo de Software
 
-Un modelo de proceso de software, comúnmente denominado en la ingeniería de software como *modelos de ciclo de vida*, es una ***representación simplificada de un proceso o marco conceptual***, estos también son denominados comúnmente como *paradigmas de procesos*. Representan el marco del proceso, pero no los detalles de las actividades específicas.
+Un modelo de proceso de software, es una ***representación simplificada de un proceso o marco conceptual***, estos también son denominados comúnmente como *paradigmas de procesos*. Representan el marco del proceso, pero no los detalles de las actividades específicas.
 Tales modelos genéricos no son descripciones definitivas de los procesos de software. Más bien, son abstracciones del proceso que se utilizan para explicar los diferentes enfoques del desarrollo de software. Se pueden considerar marcos del proceso porque se extienden y se adaptan para crear procesos más específicos de ingeniería de software. Dichos modelos no son mutuamente excluyentes y con frecuencia se usan en conjunto, sobre todo para el desarrollo de grandes sistemas.
 Es importante aclarar que la existencia de un proceso de desarrollo de software no es garantía de que el software se entregue a tiempo o que satisfaga las necesidades de los clientes.
+
+>[!caution] Diferencia entre Modelo de Ciclo de Vida y Modelo de Proceso de Desarrollo de Software
+>Un modelo de ciclo de vida del software se centra en las fases y transiciones de un producto de software a lo largo de su vida, mientras que un modelo de proceso de desarrollo de software se centra en cómo las personas involucradas en la creación y mantenimiento del software deben llevar a cabo sus actividades.
 
 #### Flujo de Procesos
 Se describe la manera en que estan organizadas las actividades estructurales y las acciones y tareas que ocurren dentro de cada una con respecto de la secuencia y el tiempo.
