Update 1. Introducción y Conceptos.md
corrección de 1 error de gramática

--- a/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -104,7 +104,7 @@ Existen dos tipos de máquinas virtuales:
 
 >[!note] Ventajas y Desventajas
 >- Ventajas:
->	- Si una máquina se entropea las demas siguen andando sin problemas.
+>	- Si una máquina se estropea las demas siguen andando sin problemas.
 >	- Facilita la realización de test y pruebas con la cantidad de recursos que lo deseemos.
 >	- Se necesita solo una máquina lo suficientemente potente para emular todas las demas.
 >- Desventajas:
