--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
@@ -8,7 +8,7 @@ Los lenguajes de programación, al ser considerados ***formales o artificiales,*
 > - Símbolos
 > - Alfabeto
 > - Cadenas
-> - Lengiajes (de forma mas conceptual)
+> - Lenguajes (de forma más conceptual)
 
 Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo más pequeño conceptualmente, a su vez son la representación indistinguible de **información**. Por otra parte, los ***Alfabetos*** son un conjunto finito y no vacío de símbolos que generalmente de forma conceptual se representan, usualmente, con la letra griega **Σ**.
 ***Las palabras o cadenas de caracteres*** son secuencias finitas de símbolos seleccionados de un alfabeto, existe un caso particular de las cadenas que es la ***cadena vacía***, que es aquella que no es compuesta por ningún símbolo; que por lo general es representada con las letras griegas **Ɛ** ó **𝝀**. Y la ***longitud de una palabra |w|*** es la cantidad de símbolos que contiene una palabra, incluyendo las repeticiones.
@@ -22,11 +22,11 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo má
 
 ![[strings-property1.png]]
 
-- **Potencia** -> Se denomina ***potencia i-énesima*** de una palabra a la operación que consiste en concatenarla consigo misma ***i*** veces.
+- **Potencia** -> Se denomina ***potencia i-enésima*** de una palabra a la operación que consiste en concatenarla consigo la misma ***i*** veces.
 
 ![[strings-property2.png]]
 
-- **Relfexión, cadena refleja o inversa** -> sea $x = A_1, A_2 .... A_n$. Entonces su reflexión será $Xr = A_n ... A_2, A_1$.
+- **Reflexión, cadena refleja o inversa** -> sea $x = A_1, A_2 .... A_n$. Entonces su reflexión será $Xr = A_n ... A_2, A_1$.
 
 ![[strings-property3.png]]
 
