--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/2. Gramática Formal.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/2. Gramática Formal.md
@@ -5,43 +5,43 @@
 >[!check] Definición de Autómata segun el area de la Informática.
 >Dispositivo o serie de disposiciones que proponen un enlazamiento automático y continuado de operaciones que permiten el procesamiento de una información de entrada, que al mismo tiempo generará una contraparte de salida.
 
-Están dadas en el estudio de autómatas, ***aceptadores, generadores y traductores***. Es relevante:
-- El estudio matemático de estas máquinas ->
+Están dadas en el estudio de autómatas ***aceptadores, generadores y traductores***. Es relevante:
+- **El estudio matemático de estas máquinas**
 	- Capacidades.
 	- Síntesis.
 	
- - La aplicación de esta teoría en el diseño de lenguajes, editores, compiladores, intérpretes ->
+ - **La aplicación de esta teoría en el diseño de lenguajes, editores,compiladores, intérpretes**
 	 - Expresar el diseño de un compilador como la interconexión de varios de estos modelos.
 	 - Implementar o simular estos modelos con programas.
 
 ##### Aceptadores
 
-Un aceptador es un autómata diseñado fundamentalmente para aceptar o rechazar cadenas de caracteres, es decir, palabras. Se pueden definir como una Quíntupla -> ***M= {Q, Σ, δ, q0 , F}*** en donde:
+Un aceptador es un autómata diseñado fundamentalmente para aceptar o rechazar cadenas de caracteres, es decir, palabras. Se pueden definir como una Quintupla $M= \{Q, Σ, δ, q_0 , F\}$ en donde:
 
-- **Q** es un conjunto de estados, o sea todos los valores que pueden tomar.
-- **Σ** es el alfabeto de entrada.
-- **δ**: Q x Σ -> Q es la función de transición determinista, se dice determinista, ya que si de entradas recibimos a y x, sin importar el orden de entrada, las salidas siempre será B.
-- **q0** es el estado inicial.
-- **F** es el conjunto de estados finales.
+- $Q$ es un conjunto de estados, osea todos los valores que pueden tomar.
+- $Σ$ es el alfabeto de entrada.
+- $δ$: $Q x Σ$ -> $Q$ es la función de transición determinista, se dice determinista ya que si de entradas recibimos a y x, sin importar el orden de entrada la salidas siempre sera B.
+- $q_0$ es el estado inicial.
+- $F$ es el conjunto de estados finales.
 
 ##### Generadores
 
-Un generador es un autómata que genera símbolos de un alfabeto finito, cuando es encendido. Se define como la cuádrupla ***M= {Q, O, δ, q0 }*** en donde:
+Un generador es un autómata que genera símbolos de un alfabeto finito, cuando es encendido. Se define como la cuádrupla $M= \{Q, O, δ, q_0 \}$ en donde:
 
-- **Q** es un conjunto de estados.
-- **O** es el alfabeto de salida.
-- **δ**: Q -> P(O) es la función de transición no determinista, esto es asi porque en este caso se busca generar todas las posibles combinaciones.
-- **q0** es el estado inicial.
+- $Q$ es un conjunto de estados.
+- $O$ es el alfabeto de salida.
+- $δ$: $Q$ -> $P(O)$ es la función de transición no determinista, esto es así porque en este caso se busca generar todas las posibles combinaciones.
+- $q_0$ es el estado inicial.
 
 ##### Traductores 
 
-Un traductor opera de manera determinista, esto es así porque por ejemplo, si se busca traducir una misma operación, escrita en distintos lenguajes de programación, y se lo quiere traducir esta misma a assembler, dicha traducción debe arrojar siempre el mismo código ensamblador para todas las traducciones de esos lenguajes. Es muy útil en el diseño de compiladores. Se define como la quíntupla ***M= {Q, Σ, O, δ, q0 }*** en donde:
+Un traductor opera de manera determinista, esto es así porque por ejemplo si se busca traducir una misma operación, escrita en distintos lenguajes de programación, y se lo quiere traducir esta misma a assembly, dicha traducción debe arrojar siempre el mismo código ensamblador para todas las traducciones de esos lenguajes. Es muy útil en el diseño de compiladores. Se define como la quíntupla $M= \{Q, Σ, O, δ, q_0 \}$ en donde:
 
-- **Q** es un conjunto de estados.
-- **Σ** es el alfabeto de entrada.
-- **O** es el alfabeto de salida.
-- **δ**: Q x Σ -> Q x O es la función de transición determinista.
-- **q0** es el estado inicial.
+- $Q$ es un conjunto de estados.
+- $Σ$ es el alfabeto de entrada.
+- $O$ es el alfabeto de salida.
+- $δ$: $Q x Σ$ -> $Q x O$ es la función de transición determinista.
+- $q_0$ es el estado inicial.
 
 ![[ALF-traductores.png]]
 
@@ -51,15 +51,15 @@ Un traductor opera de manera determinista, esto es así porque por ejemplo, si s
 
 ![[ALF-gramatica.png]]
 
-Chomsky, entre los años 50 y 60, introdujo la *teoría de las gramáticas transformacionales o teoría de lenguajes formales*. Ahora bien, para definir las palabras que pertenecen a dicho lenguaje es necesario un formalismo, porque si bien existen otras maneras de definir estas palabras, estas no son muy prácticas.
+Chomsky, entre los años 50 y 60, introdujo la *teoría de las gramáticas transformacionales o teoría de lenguajes formales*. Ahora bien para definir las palabras que pertenecen a dicho lenguaje es necesario un formalismo, porque si bien existen otras maneras de definir estas palabras éstas no son muy practicas.
 
 ##### Gramáticas Formales
 Son descripciones estructurales de las sentencias de los lenguajes. Definen un lenguaje mediante reglas de producción.
 
 - La ***sintaxis*** de un lenguaje de programación es una definición de lo que constituye un programa gramaticalmente válido en dicho lenguaje. Este queda especificado en un conjunto de reglas:
-	- **Reglas léxicas**: especifican el conjunto de caracteres que constituyen el alfabeto del lenguaje y la forma en que estos se combinan para formar palabras válidas.
+	- **Reglas léxicas**: especifican el conjunto de caracteres que constituyen el alfabeto del lenguaje y la forma en que éstos se combinan para formar palabras válidas.
 	- **Reglas sintácticas**: especifican la forma en que se construyen las estructuras válidas de un programa.
-- **Producción o Regla (x::=y)**: Es un par ordenado de palabras, en sí constituye una serie de enunciados por los cuales se pueden generar nuevas palabras a través de un axioma inicial.
+- **Producción o Regla (x::=y)**: Es un par ordenado de palabras, en si constituye una serie de enunciados por los cuales se pueden generar nuevas palabras a través de un axioma inicial.
 
 >[!info] Cosas a Tener en Cuenta.
 >Si se encuentra **x** como parte de cualquier palabra **v**, se puede sustituir **x** por **y** en **v**, a este proceso se lo denomina derivación. 
@@ -68,32 +68,33 @@ Son descripciones estructurales de las sentencias de los lenguajes. Definen un l
 >
 >De notando la estructura **(x::=y)**
 
-- **Derivación directa *v -> w***: Aplicación de una producción o regla (x::=y) a una palabra ***v*** para convertirla en otra palabra ***w***, donde: v = Z x U,  w = Z y U, (v,w,z,u ∈ Σ* ).
+- **Derivación directa *v -> w***: Aplicación de una producción o regla (x::=y) a una palabra ***v*** para convertirla en otra palabra ***w***, donde: $v = Z x U,  w = Z y U, (v,w,z,u ∈ Σ^* )$.
 	- **Derivación más a la izquierda**: Se utiliza en cada derivación directa donde la producción es aplicada a los símbolos más a la izquierda de la palabra.
 	- **Derivación más a la derecha**: Se utiliza en cada derivación directa donde la producción es aplicada a los símbolos más a la derecha de la palabra.
 - **Derivación *v -> * w***: Aplicación de una secuencia de producciones a una palabra. La diferencia principal entre la derivación directa y la derivación es que en la directa solo se aplica una única regla a la vez, mientras que en la derivación se aplica múltiples reglas en la misma operación.
 
 ##### Definición de una Gramática Formal
 
-Una gramática G se define como la cuádrupla: ***G = ( ∑T , ∑N , S, P )*** en dónde: 
+Una gramática $G$ se define como la cuádrupla: $G = ( \Sigma_T , \Sigma_N , S, P )$ en dónde: 
 
-- **∑T**: es el alfabeto de símbolos terminales.
-- **∑N**: es el alfabeto de símbolos no terminales, cumpliéndose:
-	- Σ = ΣT ∪ ΣN.
-	- ΣT ∩ ΣN = ∅
-- **S**: es el axioma. S ∈ ΣN, es decir, es una palabra conformada por caracteres no terminales.
-- **P**: es el conjunto finito de reglas de producción, tales que: P = { (u::=v)/ u::= xAy, u ∈ Σ+,v,x,y ∈ Σ*, A ∈ ΣN}
+- $\Sigma_T$: es el alfabeto de símbolos terminales.
+- $\Sigma_N$: es el alfabeto de símbolos no terminales, cumpliéndose:
+	- $Σ = Σ_T ∪ Σ_N$.
+	- $Σ_T ∩ Σ_N = \varnothing$
+- $S$: es el axioma. $S \in Σ_N$, es decir, es una palabra conformada por caracteres no terminales.
+- $P$: es el conjunto finito de reglas de producción, tales que:
+	- $P = \{ (u::=v) / u::= xAy, u ∈ Σ^+,v,x,y \in Σ^*, A \in Σ_N\}$
 
 >[!info] Aclaración
->El axioma es el enunciado inicial, es decir por donde se comienza a derivar para poder construir las palabras validas conforme al conjunto de reglas de producción. ***S*** siempre va a estar conformado por un caracter no terminal que se comenzaran a derivar repetidas veces hasta conformar las diferentes palabras, las cueles estaran compuestas unicamente de caracteres terminales.
+>El axioma es el inunciado inicial, es decir por donde se comienza a derivar para poder construir las palabras validas conforme al conjunto de reglas de producción. ***S*** siempre va a estar conformado por un caracter no terminal que se comenzaran a derivar repetidas veces hasta conformar las diferentes palabras, las cueles estaran conpuestas unicamente de caracteres terminales.
 
 
 ##### Conceptos extras
 
-- **Forma sentencial**: x es forma sentencial si existe una derivación desde el axioma hasta esa palabra, puesto esto en términos sencillos, si se puede derivar entonces estamos en presencia de una forma sentencial.
-- **Sentencia**: x es sentencia si es forma sentencial y además todos sus símbolos pertenecen al alfabeto de símbolos terminales, en pocas palabras si está compuesta únicamente de símbolos terminales entonces es una secuencia.
-- **Lenguaje generado por una gramática L(G)**: es el conjunto de todas las sentencias de la gramática.
-- **Equivalencia de gramáticas**: dos gramáticas ***G1*** y ***G2*** son equivalentes si se verifica que: G1 ≈ G2 -> L(G1) = L(G2), es decir que esas dos gramáticas me produzcan el mismo lenguaje.
+- **Forma sentencial**: $x$ es forma sentencial si existe una derivación desde el axioma hasta esa palabra, puesto esto en términos sencillos, si se puede derivar entonces estamos en presencia de una forma sentencial.
+- **Sentencia**: $x$ es sentencia si es forma sentencial y además todos sus símbolos pertenecen al alfabeto de símbolos terminales, en pocas palabras si está compuesta únicamente de símbolos terminales entonces es una secuencia.
+- **Lenguaje generado por una gramática** $L(G)$: es el conjunto de todas las sentencias de la gramática.
+- **Equivalencia de gramáticas**: dos gramáticas $G_1$ y $G_2$ son equivalentes si se verifica que: $G_1 ≈ G_2$ -> $L(G_1) = L(G_2)$, es decir que esas dos gramáticas me produzcan el mismo lenguaje.
 - **Regla compresora**: es aquella cuya parte derecha está formada por menos símbolos que la parte izquierda.
 
 ---
@@ -105,27 +106,27 @@ Chomsky clasificó las gramáticas en cuatro grandes grupos, que se llaman, resp
 
 ##### Gramáticas del tipo 0 (sin restricciones).
 
-Son las gramáticas más generales. Sus reglas de producción no tienen ninguna restricción adicional. Los lenguajes representados por estas gramáticas se llaman lenguajes recursivamente enumerables. En la parte izquierda debe existir al menos un símbolo no terminal. Respecto de las partes derechas de las producciones, no hay ningún tipo de restricción.
+Son las gramáticas más generales. Sus reglas de producción no tienen ninguna restricción adicional. Los lenguajes representados por estas gramáticas se llaman lenguajes ***recursivamente enumerables***. En la parte izquierda debe existir al menos un símbolo no terminal. Respecto de las partes derechas de las producciones, no hay ningún tipo de restricción.
 
-#### Gramáticas del tipo 1 (dependientes o sensibles al contexto). 
+#### Gramáticas del tipo 1 (Dependientes o Sensibles al Contexto). 
 
-Las reglas de producción de estas gramáticas tienen la misma forma que las de las gramáticas de estructura de frases, pero se añade la restricción de que ninguna regla puede ser compresora. Esto es importante, porque si una gramática no es compresora, es fácil construir un algoritmo que, dada una palabra cualquiera si la palabra puede o no ser generada por la gramática. Se admite, como excepción, que una gramática del tipo 1 pueda contener la regla S::= λ, donde S es el axioma. De lo contrario, el lenguaje representado por una gramática del tipo 1 no podrá contener la palabra vacía. Esto se permite únicamente en el caso en que la gramática no sea recursiva en S, para evitar la posibilidad de que haya derivaciones no crecientes de palabras distintas de λ. 
+Las reglas de producción de estas gramáticas tienen la misma forma que las de las gramáticas de estructura de frases, pero se añade la restricción de que ninguna regla puede ser compresora. Esto es importante, porque si una gramática no es compresora, es fácil construir un algoritmo que, dada una palabra cualquiera si la palabra puede o no ser generada por la gramática. Se admite, como excepción, que una gramática del tipo 1 pueda contener la regla $S::= λ$, donde $S$ es el axioma. De lo contrario, el lenguaje representado por una gramática del tipo 1 no podrá contener la palabra vacía. Esto se permite únicamente en el caso en que la gramática no sea recursiva en $S$, para evitar la posibilidad de que haya derivaciones no crecientes de palabras distintas de $λ$. 
 
-![[1Tipo-gramatica.png]]
+$$P=\{ (S::= \lambda) ó(xAy ::= xvy)/ x, y \in \Sigma^*, A \in \Sigma_N, v \in \Sigma^+ \}$$
 
 - La parte izquierda y derecha de las producciones tienen que tener una parte común.
 
 >[!info] Particularidad
 ><span class="centerImg"> ![[1Tipo-gramaticaParticularidad.png]] </span>
 >
-> Esto significa que cada palabra nueva formada con estas gramáticas va a ser más larga o a lo sumo igual en longitud que su anterior.
+> Esto significa que cada palabra nueva formada con estas gramáticas va a ser mas larga o a lo sumo igual en longitud que su anterior.
 
 
 #### Gramáticas del tipo 2 (independientes o libres del contexto).
 
-En estas gramáticas. La parte izquierda de las producciones solo puede tener un símbolo no terminal:
+En estas gramáticas. La parte izquierda de las producciones sólo puede tener un símbolo no terminal:
 
-![[2Tipo-gramatica.png]]
+$$P=\{ (S::= \lambda) ó (A::=v)/ A \in \Sigma_N, v \in \Sigma^+ \}$$
 
 Estas gramáticas se denominan de contexto libre, porque a la hora de transformar una palabra en otra, el símbolo no terminal que se transforma no depende de los que estén a la izquierda o derecha. Así, cuando se realicen derivaciones en las que se transforme el símbolo A de la fórmula anterior, no hace falta saber qué hay alrededor de él.
 
@@ -139,7 +140,7 @@ Son las gramáticas más restrictivas, estas gramáticas se clasifican en dos su
 1. **Gramáticas lineales por la izquierda**: Cuyas reglas de producción pueden tomar una de las tres formas siguientes:
 	- A ::= a
 	- A ::= V a (V es un no-terminal.)
-	- S ::= λ (S axioma de la gramática)
+	- S ::=  λ (S axioma de la gramática)
 2. **Gramáticas lineales por la derecha**: Cuyas reglas de producción pueden tomar una de las tres formas siguientes:
 	- A ::= a
 	- A ::= a V
@@ -150,7 +151,8 @@ El significado de las letras es el mismo que el anterior.
 En ambos casos, la última regla puede aparecer únicamente si la gramática no es recursiva en S. Los lenguajes que pueden representarse mediante gramáticas del tipo 3 se llaman lenguajes regulares. Es evidente que toda gramática del tipo 3 es también del tipo 2. Por lo tanto, todo lenguaje regular será también un lenguaje independiente del contexto. 
 
 Existe, además, una jerarquía entre los tipos de gramáticas, tal que las gramáticas del tipo i son más generales que las de tipo i + 1. Formalmente:
-<span class="centerImg"> ![[3Tipo-gramatica.png]] </span>
+
+$$G_3 \subseteq G_2 \subseteq G_1 \subseteq G_0$$
 
 ---
 
@@ -158,7 +160,7 @@ Existe, además, una jerarquía entre los tipos de gramáticas, tal que las gram
 
 #### BNF y EBNF
 
-- Es un metalenguaje que consta de ΣT , ΣN , S y P.
+- Es un metalenguaje que consta de $Σ_T$ , $Σ_N$ , $S$ y $P$.
 - Se asocia con las gramáticas de contexto libre (tipo 2).
 - Es muy útil cuando el conjunto de reglas de producción contiene varias reglas que comparten la parte izquierda.
 
@@ -200,9 +202,9 @@ Representación gráfica de las derivaciones de una gramática. Se utilizan en l
 >
 >![[ALF-recursividad.png]]
 >
->- **Gramática recursiva**: Sí existe al menos una producción recursiva en su conjunto de producciones.
+>- **Gremática recursiva**: Si existe al menos una producción recursiva en su conjunto de producciones.
 >
->***Ambigüedad***: Cuando existe más de una forma de generar una palabra a partir del axioma de una gramática. Puede surgir a varios niveles:
+>***Ambigüedad***:  Cuando existe más de una forma de generar una palabra a partir del axioma de una gramática. Puede surgir a varios niveles:
 >- **Sentencia**: si tiene más de una derivación o árbol de derivación.
 >- **Gramática**: si tiene al menos una sentencia ambigua.
 >- **Lenguaje**: si existe una gramática ambigua que lo genera. Si todas las gramáticas que lo generan son ambiguas, el lenguaje es ***inherentemente ambiguo***.
